--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -69,7 +69,6 @@
         color: #000;
         font-weight: 500;
     }
-
     .hero-text .btn {
         text-transform: uppercase;
         font-weight: 600;
@@ -85,6 +84,10 @@
         grid-template-columns: repeat(1, 1fr);
         row-gap: 20px;
     }
+    #hero-bt .row .hero-box{
+        margin-left: 15px;
+    }
+
     /* About Me */
     #about-me .row{
         display: grid;
