--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ a {
     padding: 80px 0 80px 0;
     margin: 80px 0 80px 0;
 }
-#counter .row{
+#counter .counter-row{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
@@ -330,8 +330,6 @@ a {
     color: #008cff;
     font-size: 50px;
 }
-
-
 .counter-icon .text {
     color: #fff;
 }
@@ -587,7 +585,7 @@ a {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-.case-btn{
+#case-study .case-btn{
     display: flex;
     align-items: center;
     justify-content: end;
@@ -757,20 +755,27 @@ a {
 #latest{
     padding: 100px 0 100px 0;
 }
-
-#latest .service-text .span-text {
+.service-img .img-box{
+    position: relative;
+}
+#latest .service-img .img-box .span-text {
     position: absolute;
     background-color: #008cff;
     text-align: center;
     padding: 5px 10px 5px 10px;
     color: #fff;
     font-size: 15px;
-    left: 15px;
-    top: -230px;
+    left: 5%;
+    top: 5%;
 }
 #latest .service-text h5{
     font-size: 15px;
     font-weight: 400;
+}
+#latest .latest-row{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
 
@@ -859,7 +864,11 @@ a {
     font-size: 22px;
     font-weight: 700;
 }
-
+#footer .footer-row{
+    display: grid;
+    grid-template-columns: 40% 20% 30%;
+    column-gap: 10%;
+}
 .footer-text ul {
     list-style-type: none;
     line-height: 45px;
